# baselinelens

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE-MIT  README.md  index.html  package-lock.json  package.json  rust-toolchain.toml
.github/: FUNDING.yml
.github/workflows/: release.yml
design/: Dashboard v2.html  HANDOFF.md
design/v2/: Console.jsx  Overview.jsx  components-v2.jsx  data-v2.jsx  tokens-v2.css
ps/: audit.ps1
scripts/: bump-version.js  bump-version.mjs  sign.ps1
src/: App.css  App.tsx  ConfirmDialog.tsx  Console.tsx  ErrorBoundary.tsx  Onboarding.css  Onboarding.tsx  Overview.tsx  SettingSegment.tsx  ThemeSegment.tsx  bindings.ts  format.test.ts  format.ts  hooks.ts  main.tsx  ui.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/ps/: audit-registry.ps1  audit-security-policy.ps1  audit-system-read.ps1  audit.ps1  device-info.ps1
src-tauri/src/: audit.rs  bindings.rs  commands.rs  error.rs  host.rs  lib.rs  main.rs  parser.rs  storage.rs
src-tauri/src/audit/: elevation.rs  error.rs  generator.rs  merge.rs  model.rs  runner.rs
src-tauri/src/parser/: categories.rs  classify.rs  model.rs  pdf.rs  structure.rs
src-tauri/src/parser/classify/: audit_policy.rs  expected.rs  path.rs  policy_manager.rs  registry.rs  secedit.rs  testutil.rs  user_rights_assignment.rs
src-tauri/src/storage/: error.rs  model.rs  paths.rs  persist.rs
src/app/: Dashboard.tsx  EmptyScanState.tsx  PreferencesContext.tsx  SettingsMenu.tsx  banners.tsx
src/console/: DetailDrawer.tsx  (+5 more)
(+31 files in other folders)
