[package]
name = "baselinelens"
version = "0.1.0"
description = "Windows hardening posture dashboard"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "baselinelens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
specta = { version = "2.0.0-rc.24", features = ["chrono"] }
specta-typescript = "0.0.11"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-specta = { version = "2.0.0-rc.24", features = ["derive", "typescript"] }
thiserror = "2"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

